--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,8 @@
         }
     ],
     "start_url": "/",
-    "display": "standalone"
+    "display": "standalone",
+    "background_color": "#fce5cd",
+    "theme_color": "#bd9468"
 
 }
